fix: separate service from workload, add rollout support

--- a/helm-chart/templates/monitor.yaml
+++ b/helm-chart/templates/monitor.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.monitor.useRollout }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,15 +29,4 @@ spec:
           httpGet:
             path: /health
             port: http
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: fleet-monitor
-spec:
-  selector:
-    app: fleet-monitor
-  ports:
-  - name: http
-    port: 8000
-    targetPort: http
+{{- end }}
